--- a/.gitmodules
+++ b/.gitmodules
@@ -1,35 +1,44 @@
 [submodule "projects/Data_Analytics_for_Age_friendly_busan"]
     path = projects/Data_Analytics_for_Age_friendly_busan
     url = https://github.com/datascience-labs/Data_Analytics_for_Age_friendly_busan.git
+    branch = main
 
 [submodule "projects/debs2022gc"]
     path = projects/debs2022gc
     url = https://github.com/datascience-labs/debs2022gc.git
+    branch = main
 
 [submodule "projects/Green-Car-Charging-Station-Site-Selection"]
     path = projects/Green-Car-Charging-Station-Site-Selection
     url = https://github.com/datascience-labs/Green-Car-Charging-Station-Site-Selection.git
+    branch = main
 
 [submodule "projects/conrec"]
     path = projects/conrec
     url = https://github.com/datascience-labs/conrec.git
+    branch = main
 
 [submodule "projects/BI_project"]
     path = projects/BI_project
     url = https://github.com/datascience-labs/BI_project.git
+    branch = main
 
 [submodule "projects/FDIA_with_TCN"]
     path = projects/FDIA_with_TCN
     url = https://github.com/datascience-labs/FDIA_with_TCN.git
+    branch = main
 
 [submodule "projects/COCL"]
     path = projects/COCL
     url = https://github.com/datascience-labs/COCL.git
+    branch = main
 
 [submodule "projects/Carbon-friendly"]
     path = projects/Carbon-friendly
     url = https://github.com/datascience-labs/Carbon-friendly.git
+    branch = main
 
 [submodule "projects/Balance_Up"]
     path = projects/Balance_Up
     url = https://github.com/datascience-labs/Balance_Up.git
+    branch = main
