anomaliflow project update

--- a/_config.yml
+++ b/_config.yml
@@ -52,3 +52,4 @@ projects:
   - "datascience-labs/Carbon-friendly"
   - "datascience-labs/COCL"
   - "datascience-labs/FDIA_with_TCN"
+  - "datascience-labs/anomali-flow"
