--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,9 @@ projects:
   - "datascience-labs/Green-Car-Charging-Station-Site-Selection"
   - "datascience-labs/Data_Analytics_for_Age_friendly_busan"
   - "datascience-labs/Balance_Up"
-  - "datascience-labs/Carbon-friendly"
+  - "datascience-labs/CAFTM"
   - "datascience-labs/COCL"
   - "datascience-labs/FDIA_with_TCN"
   - "datascience-labs/anomali-flow"
+  - "datascience-labs/GreenAccounter"
   - "datascience-labs/CDRL4AD"
